--- a/orderSummary.html
+++ b/orderSummary.html
@@ -111,8 +111,8 @@
                                         <div class="del-to">
                                             <h5>Home</h5>
                                             <div class="control-actions-address">
-                                                <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
-                                                <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                <a href="javascript:void(0);" data-name="edit" class="glyphicon glyphicon-pencil"></a>
+                                                <a href="javascript:void(0);" data-name="delete" class="glyphicon glyphicon-trash"></a>
                                             </div>
                                         </div>
                                         <p>18, Riveria Heights</p>
@@ -146,8 +146,8 @@
                                             <div class="delivery-sub">
                                                 Delivering to <span>Home</span>
                                                 <div class="control-actions-address">
-                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
-                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                    <a href="javascript:void(0);" data-name="edit" class="glyphicon glyphicon-pencil"></a>
+                                                    <a href="javascript:void(0);" data-name="delete" class="glyphicon glyphicon-trash"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -158,8 +158,10 @@
                                             <div class="delivery-sub">
                                                 Delivering to <span>Home</span>
                                                 <div class="control-actions-address">
-                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
-                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                    <div class="control-actions-address">
+                                                        <a href="javascript:void(0);" data-name="edit" class="glyphicon glyphicon-pencil"></a>
+                                                        <a href="javascript:void(0);" data-name="delete" class="glyphicon glyphicon-trash"></a>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -170,8 +172,10 @@
                                             <div class="delivery-sub">
                                                 Delivering to <span>Home</span>
                                                 <div class="control-actions-address">
-                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
-                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                    <div class="control-actions-address">
+                                                        <a href="javascript:void(0);" data-name="edit" class="glyphicon glyphicon-pencil"></a>
+                                                        <a href="javascript:void(0);" data-name="delete" class="glyphicon glyphicon-trash"></a>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
