--- a/getStarted.html
+++ b/getStarted.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
         <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -21,7 +22,7 @@
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
         <script type="text/javascript" src="./js/homePage.js"></script>
     </head>
-    <body>
+    <body class="get-started-body">
         <header>
             <div class="header-main-wrap">
                 <div class="header-left-wrap">
