background images change

--- a/paymentsPage.html
+++ b/paymentsPage.html
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
         <script type="text/javascript" src="./js/homePage.js"></script>
     </head>
-    <body>
+    <body class="payment-body">
         <header>
             <div class="header-main-wrap">
                 <div class="header-left-wrap">
