--- a/getStartedSteps.html
+++ b/getStartedSteps.html
@@ -23,7 +23,7 @@
         <script type="text/javascript" src="./js/homePage.js"></script>
         <script type="text/javascript" src="./js/getStartedSteps.js"></script>
     </head>
-    <body>
+    <body class="get-started-steps-body">
         <header>
             <div class="header-main-wrap">
                 <div class="header-left-wrap">
