--- a/orderSummary.html
+++ b/orderSummary.html
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="./js/homePage.js"></script>
         <script type="text/javascript" src="./js/orderSummary.js"></script>
     </head>
-    <body>
+    <body class="order-summary-body">
         <header>
             <div class="header-main-wrap">
                 <div class="header-left-wrap">
