--- a/subscription.html
+++ b/subscription.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
         <script type="text/javascript" src="./js/homePage.js"></script>
     </head>
-    <body>
+    <body class="subscription-body">
         <header>
             <div class="header-main-wrap">
                 <div class="header-left-wrap">
