--- a/payment-success.html
+++ b/payment-success.html
@@ -37,7 +37,7 @@
             </div>
         </header>
         <section>
-            <div class="auth-container payments-container">
+            <div class="auth-container ">
                 <div class="auth-wrapper payment-wrapper">
                     <div class="payment-in">
                         <div class="payment-success">
