food summary page css changes

--- a/food-summary.html
+++ b/food-summary.html
@@ -197,7 +197,7 @@
                     </div>
                     <div class="days-wrap">
                         <div class="days-wrap-in">
-                            <div class="days-tile f-l">
+                            <div class="days-tile f-l op-current">
                                 <div class="date">20</div>
                                 <div class="day">Sat</div>
                             </div>
@@ -227,6 +227,14 @@
                             </div>
                             <div class="clr"></div>
                         </div>
+                        <div class="days-par-actions">
+                            <div class="prev">
+                                <a href="javascript:void(0);"></a>
+                            </div>
+                            <div class="next">
+                                <a href="javascript:void(0);"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="change-preferences">
@@ -241,43 +249,51 @@
                     </div>
                     <div class="meal-options">
                         <div class="option f-l">
-                            <div class="image-wr breakfast-tile">
-                                <img src="./images/breakfast-image.png" class="img img-responsive" alt="breakfast" />
-                            </div>
-                            <div class="meal-sub-wrap">
-                                <h4>Breakfast</h4>
-                                <a href="#">Edit</a>
-                                <div class="clr"></div>
-                            </div>
-                        </div>
-                        <div class="option f-l">
-                            <div class="image-wr lunch-tile">
-                                <img src="./images/lunch-image.png" class="img img-responsive" alt="lunch" />
-                            </div>
-                            <div class="meal-sub-wrap">
-                                <h4>Lunch</h4>
-                                <a href="#">Edit</a>
-                                <div class="clr"></div>
+                            <div class="option-inn">
+                                <div class="image-wr breakfast-tile">
+                                    <img src="./images/breakfast-image.png" class="img img-responsive" alt="breakfast" />
+                                </div>
+                                <div class="meal-sub-wrap">
+                                    <h4>Breakfast</h4>
+                                    <a href="#">Edit</a>
+                                    <div class="clr"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="option f-l">
-                            <div class="image-wr snacks-tile">
-                                <img src="./images/snacks-image.png" class="img img-responsive" alt="snacks" />
-                            </div>
-                            <div class="meal-sub-wrap">
-                                <h4>Snacks</h4>
-                                <a href="#">Edit</a>
-                                <div class="clr"></div>
+                            <div class="option-inn">
+                                <div class="image-wr lunch-tile">
+                                    <img src="./images/lunch-image.png" class="img img-responsive" alt="lunch" />
+                                </div>
+                                <div class="meal-sub-wrap">
+                                    <h4>Lunch</h4>
+                                    <a href="#">Edit</a>
+                                    <div class="clr"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="option f-l">
-                            <div class="image-wr dinner-tile">
-                                <img src="./images/dinner-image.png" class="img img-responsive" alt="dinner" />
+                            <div class="option-inn">
+                                <div class="image-wr snacks-tile">
+                                    <img src="./images/snacks-image.png" class="img img-responsive" alt="snacks" />
+                                </div>
+                                <div class="meal-sub-wrap">
+                                    <h4>Snacks</h4>
+                                    <a href="#">Edit</a>
+                                    <div class="clr"></div>
+                                </div>
                             </div>
-                            <div class="meal-sub-wrap">
-                                <h4>Dinner</h4>
-                                <a href="#">Edit</a>
-                                <div class="clr"></div>
+                        </div>
+                        <div class="option f-l">
+                            <div class="option-inn">
+                                <div class="image-wr dinner-tile">
+                                    <img src="./images/dinner-image.png" class="img img-responsive" alt="dinner" />
+                                </div>
+                                <div class="meal-sub-wrap">
+                                    <h4>Dinner</h4>
+                                    <a href="#">Edit</a>
+                                    <div class="clr"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="clr"></div>
