food summary page css changes

--- a/food-summary.html
+++ b/food-summary.html
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     <div class="meal-options">
-                        <div class="option f-l">
+                        <div class="option active f-l">
                             <div class="option-inn">
                                 <div class="image-wr breakfast-tile">
                                     <img src="./images/breakfast-image.png" class="img img-responsive" alt="breakfast" />
