css changes -register page

--- a/register.html
+++ b/register.html
@@ -80,7 +80,7 @@
             </div>
         </section>
         <footer>
-            <div class="footer-main-wrap">
+            <div class="footer-main-wrap fix">
                 <div class="footer-in">
                     <img src="" class="img img-responsive" />
                 </div>
