--- a/getStartedSteps.html
+++ b/getStartedSteps.html
@@ -75,13 +75,15 @@
                             <div class="step-description">
                                 <p>No sweat! You can always edit the details and the options from your account  page. Just go with the flow!</p>
                             </div>
-                            <div class="step-actions">
+                            <div class="step-actions ">
                                 <div class="actions">
                                     <button class="breakfast-button step-btn-meal-subs" data-mealsubs="breakfast">Breakfast</button>
                                 </div>
                                 <div class="actions">
                                     <button class="lunch-button step-btn-meal-subs" data-mealsubs="lunch">Lunch</button>
                                 </div>
+                            </div>
+                            <div class="step-actions ">
                                 <div class="actions">
                                     <button class="snacks-button step-btn-meal-subs" data-mealsubs="snacks">Snacks</button>
                                 </div>
@@ -120,7 +122,7 @@
                             <div class="step-description">
                                 <p>Don't overthink. You can always change all the options from your account profile. Just go with the flow!</p>
                             </div>
-                            <div class="step-actions">
+                            <div class="step-actions cuisine">
                                 <div class="actions">
                                     <button class="sunday slide-skip-nv" data-skipDay="sunday">Sunday</button>
                                 </div>
@@ -154,51 +156,55 @@
                             <div class="step-description">
                                 <p>Don't overthink. You can always change all the options from your account profile. Just go with the flow!</p>
                             </div>
-                            <div class="step-actions">
-                                <div class="actions">
+                            <div class="step-actions cuisine">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="northindian slide-cuisine" data-cuisine="northindian">North Indian</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="southindian slide-cuisine" data-cuisine="southindian">South Indian</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="bengali slide-cuisine" data-cuisine="bengali">Bengali</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="jain slide-cuisine" data-cuisine="jain">Jain</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="chinese slide-cuisine" data-cuisine="chinese">Chinese</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="healthy slide-cuisine" data-cuisine="healthy">Healthy</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-visible">
                                     <button class="keto slide-cuisine" data-cuisine="keto">Keto</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="marathi slide-cuisine" data-cuisine="marathi">Marathi</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="malayali slide-cuisine" data-cuisine="malayali">Malayali</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="andhra slide-cuisine" data-cuisine="andhra">Andhra</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="odia slide-cuisine" data-cuisine="odia">Odia</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="tamil slide-cuisine" data-cuisine="tamil">Tamil</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="rajasthani slide-cuisine" data-cuisine="rajasthani">Rajasthani</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="gujarati slide-cuisine" data-cuisine="gujarati">Gujarati</button>
                                 </div>
-                                <div class="actions">
+                                <div class="actions cuisine-button default-hidden">
                                     <button class="nutritionist slide-cuisine" data-cuisine="nutritionist">Nutritionist</button>
+                                </div>
+                                <div class="step-in-action">
+                                    <button class="expand" data-type="expand"></button>
+                                    <button class="compress hidden" data-type="compress"></button>
                                 </div>
                             </div>
                         </div>
