--- a/hospital/cart.html
+++ b/hospital/cart.html
@@ -81,8 +81,8 @@
                         <div class="clr"></div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 page-action">
-                    <button>Proceed</button>
+                <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 main-action">
+                    <button class="med-button">Next</button>
                 </div>
             </div>
         </section>
