--- a/hospital/main-menu.html
+++ b/hospital/main-menu.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../css/getStarted.css" type="text/css" />
         <link rel="stylesheet" href="../css/backgroundImage.css" type="text/css" />
         <link rel="stylesheet" href="../css/hospital.css" type="text/css" />
+        <link rel="stylesheet" href="../css/hospital-menu.css" type="text/css" />
         <link
             rel="icon"
             href="../images/favicon.jpeg"
@@ -43,27 +44,27 @@
                         <h3>Food that springs you back to health.</h3>
                     </div>
                     <div class="prop-wrap col-sm-12 col-md-12 col-xs-12 col-lg-12">
-                        <div class="f-l col-sm-4 col-md-4 col-lg-4 col-xs-12 less-oil">
+                        <div class="f-l bar-h col-sm-4 col-md-4 col-lg-4 col-xs-12 less-oil">
                             <p>Less Oily & Spicy Recipes</p>
                         </div>
-                        <div class="f-l col-sm-4 col-md-4 col-lg-4 col-xs-12 fr-nat">
+                        <div class="f-l bar-h col-sm-4 col-md-4 col-lg-4 col-xs-12 fr-nat">
                             <p>Made with Fresh & 
                                 All Natural Ingredients</p>
                         </div>
-                        <div class="f-l col-sm-4 col-md-4 col-lg-4 col-xs-12 hyg-safe">
+                        <div class="f-l bar-h col-sm-4 col-md-4 col-lg-4 col-xs-12 hyg-safe">
                             <p>100% Hygienic 
                                 & Safe</p>
                         </div>
                         <div class="clr"></div>
                     </div>
                     <div class="search-wr col-sm-12 col-md-12 col-xs-12 col-lg-12">
-                        <div class="f-l date-wr col-sm-3 col-md-3 col-xs-12">
+                        <div class="f-l date-wr col-sm-4 col-md-4 col-xs-12">
                             <input type="text" class="date" placeholder="Enter Date" />
                         </div>
-                        <div class="f-l curr-time-wr col-sm-3 col-md-3 col-xs-12">
+                        <div class="f-l curr-time-wr col-sm-4 col-md-4 col-xs-12">
                             <input type="text" class="date" placeholder="Enter Time" />
                         </div>
-                        <div class="f-l location-wr col-sm-3 col-md-3 col-xs-12">
+                        <div class="f-l location-wr col-sm-4 col-md-4 col-xs-12">
                             <input type="text" class="date" placeholder="Enter location" />
                         </div>
                         <div class="clr"></div>
@@ -91,12 +92,35 @@
                                 <div class="filter-by">
                                     Filter By
                                 </div>
+                                <div class="clr"></div>
                             </div>
+                            <div class="clr"></div>
                         </div>
                         <div class="meal-cont col-sm-12 col-md-12 col-xs-12 col-lg-12">
-                            <div class="meal-tile">
-                                <div class="meal-image">
-                                    <img src="../images/southindian.png" class="img img-responsive" />
+                            <div class="meal-tile f-l col-sm-4 col-md-4 col-lg-4 col-xs-12">
+                                <div class="meal-image si-meal">
+                                    <img src="../images/si-meal.png" class="img img-responsive" />
+                                </div>
+                                <div class="meal-detail ">
+                                    <h4>South Indian Plan</h4>
+                                    <p>1 Rawa Pulao & 1 Kesari Bath</p>
+                                </div>
+                                <div class="price-detail">
+                                    <p>Rs 120/meal</p>
+                                </div>
+                                <div class="clasfi">
+                                    <div class="quantity-wr">
+                                        <div class="subs f-l">-</div>
+                                        <div class="value f-l">10</div>
+                                        <div class="add f-l">+</div>
+                                        <div class="clr"></div>
+                                    </div>
+                                </div>
+                                <div class="sdw-ele"></div>
+                            </div>
+                            <div class="meal-tile f-l col-sm-4 col-md-4 col-lg-4 col-xs-12">
+                                <div class="meal-image keto-meal">
+                                    <img src="../images/keto-meal.png" class="img img-responsive" />
                                 </div>
                                 <div class="meal-detail">
                                     <h4>South Indian Plan</h4>
@@ -105,16 +129,19 @@
                                 <div class="price-detail">
                                     <p>Rs 120/meal</p>
                                 </div>
-                                <div class="quantity-wr">
-                                    <div class="subs f-l">-</div>
-                                    <div class="value f-l">10</div>
-                                    <div class="add f-l">+</div>
-                                    <div class="clr"></div>
+                                <div class="clasfi">
+                                    <div class="quantity-wr">
+                                        <div class="subs f-l">-</div>
+                                        <div class="value f-l">10</div>
+                                        <div class="add f-l">+</div>
+                                        <div class="clr"></div>
+                                    </div>
                                 </div>
+                                <div class="sdw-ele"></div>
                             </div>
-                            <div class="meal-tile">
-                                <div class="meal-image">
-                                    <img src="../images/southindian.png" class="img img-responsive" />
+                            <div class="meal-tile f-l col-sm-4 col-md-4 col-lg-4 col-xs-12">
+                                <div class="meal-image ni-non-veg">
+                                    <img src="../images/ni-non-veg.png" class="img img-responsive" />
                                 </div>
                                 <div class="meal-detail">
                                     <h4>South Indian Plan</h4>
@@ -123,31 +150,17 @@
                                 <div class="price-detail">
                                     <p>Rs 120/meal</p>
                                 </div>
-                                <div class="quantity-wr">
-                                    <div class="subs f-l">-</div>
-                                    <div class="value f-l">10</div>
-                                    <div class="add f-l">+</div>
-                                    <div class="clr"></div>
+                                <div class="clasfi">
+                                    <div class="quantity-wr">
+                                        <div class="subs f-l">-</div>
+                                        <div class="value f-l">10</div>
+                                        <div class="add f-l">+</div>
+                                        <div class="clr"></div>
+                                    </div>
                                 </div>
+                                <div class="sdw-ele"></div>
                             </div>
-                            <div class="meal-tile">
-                                <div class="meal-image">
-                                    <img src="../images/southindian.png" class="img img-responsive" />
-                                </div>
-                                <div class="meal-detail">
-                                    <h4>South Indian Plan</h4>
-                                    <p>1 Rawa Pulao & 1 Kesari Bath</p>
-                                </div>
-                                <div class="price-detail">
-                                    <p>Rs 120/meal</p>
-                                </div>
-                                <div class="quantity-wr">
-                                    <div class="subs f-l">-</div>
-                                    <div class="value f-l">10</div>
-                                    <div class="add f-l">+</div>
-                                    <div class="clr"></div>
-                                </div>
-                            </div>
+                            <div class="clr"></div>
                         </div>
                     </div>
                     <div class="menu-plans-wrapper col-sm-12 col-md-12 col-xs-12 col-lg-12">
@@ -167,11 +180,12 @@
                                     Filter By
                                 </div>
                             </div>
+                            <div class="clr"></div>
                         </div>
                         <div class="meal-cont col-sm-12 col-md-12 col-xs-12 col-lg-12">
-                            <div class="meal-tile">
-                                <div class="meal-image">
-                                    <img src="../images/southindian.png" class="img img-responsive" />
+                            <div class="meal-tile f-l col-sm-4 col-md-4 col-lg-4 col-xs-12">
+                                <div class="meal-image si-meal">
+                                    <img src="../images/si-meal.png" class="img img-responsive" />
                                 </div>
                                 <div class="meal-detail">
                                     <h4>South Indian Plan</h4>
@@ -180,16 +194,19 @@
                                 <div class="price-detail">
                                     <p>Rs 120/meal</p>
                                 </div>
-                                <div class="quantity-wr">
-                                    <div class="subs f-l">-</div>
-                                    <div class="value f-l">10</div>
-                                    <div class="add f-l">+</div>
-                                    <div class="clr"></div>
+                                <div class="clasfi">
+                                    <div class="quantity-wr">
+                                        <div class="subs f-l">-</div>
+                                        <div class="value f-l">10</div>
+                                        <div class="add f-l">+</div>
+                                        <div class="clr"></div>
+                                    </div>
                                 </div>
+                                <div class="sdw-ele"></div>
                             </div>
-                            <div class="meal-tile">
-                                <div class="meal-image">
-                                    <img src="../images/southindian.png" class="img img-responsive" />
+                            <div class="meal-tile f-l col-sm-4 col-md-4 col-lg-4 col-xs-12">
+                                <div class="meal-image keto-meal">
+                                    <img src="../images/keto-meal.png" class="img img-responsive" />
                                 </div>
                                 <div class="meal-detail">
                                     <h4>South Indian Plan</h4>
@@ -198,16 +215,19 @@
                                 <div class="price-detail">
                                     <p>Rs 120/meal</p>
                                 </div>
-                                <div class="quantity-wr">
-                                    <div class="subs f-l">-</div>
-                                    <div class="value f-l">10</div>
-                                    <div class="add f-l">+</div>
-                                    <div class="clr"></div>
+                                <div class="clasfi">
+                                    <div class="quantity-wr">
+                                        <div class="subs f-l">-</div>
+                                        <div class="value f-l">10</div>
+                                        <div class="add f-l">+</div>
+                                        <div class="clr"></div>
+                                    </div>
                                 </div>
+                                <div class="sdw-ele"></div>
                             </div>
-                            <div class="meal-tile">
-                                <div class="meal-image">
-                                    <img src="../images/southindian.png" class="img img-responsive" />
+                            <div class="meal-tile f-l col-sm-4 col-md-4 col-lg-4 col-xs-12">
+                                <div class="meal-image ni-non-veg">
+                                    <img src="../images/ni-non-veg.png" class="img img-responsive" />
                                 </div>
                                 <div class="meal-detail">
                                     <h4>South Indian Plan</h4>
@@ -216,29 +236,35 @@
                                 <div class="price-detail">
                                     <p>Rs 120/meal</p>
                                 </div>
-                                <div class="quantity-wr">
-                                    <div class="subs f-l">-</div>
-                                    <div class="value f-l">10</div>
-                                    <div class="add f-l">+</div>
-                                    <div class="clr"></div>
+                                <div class="clasfi">
+                                    <div class="quantity-wr">
+                                        <div class="subs f-l">-</div>
+                                        <div class="value f-l">10</div>
+                                        <div class="add f-l">+</div>
+                                        <div class="clr"></div>
+                                    </div>
                                 </div>
+                                <div class="sdw-ele"></div>
                             </div>
+                            <div class="clr"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 page-action">
-                        <button>Next</button>
+                    <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 main-action">
+                        <button class="med-button">Next</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 no-meal-wrap">
                     <div class="order-success-in col-sm-12 col-md-12 col-lg-12 col-xs-12">
                         <div class="content">
                             <div class="head"><h3>UH-OH!</h3></div>
-                            <div class="image-wr">
-                                <img src="../images/order-succ.png" class="img img-responsive" />
+                            <div class="bubble">
+                                <div class="image-wr">
+                                    <img src="../images/order-succ.png" class="img img-responsive" />
+                                </div>
                             </div>
-                            <div class="head">
-                                <p>Sorry you have execceded the cut off time to place a new order. 
-                                    Please visit tomorrow by 11:00 am to view the next available menu.</p>
+                            <div class="">
+                                <p>Sorry you have execceded the cut off time to place a new order. </p>
+                                   <p> Please visit tomorrow by 11:00 am to view the next available menu.</p>
                             </div>
                         </div>
                     </div>
