--- a/hospital/delivery-page.html
+++ b/hospital/delivery-page.html
@@ -43,7 +43,7 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 delivery-container">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 delivery-wrapper">
                     <div class="head">
-                        <p>DELIVERY DETAILS</p>
+                        <h3>DELIVERY DETAILS</h3>
                     </div>
                     <div class="address-form">
                         <div class="input-con">
@@ -59,13 +59,11 @@
                             <p class="error">Please enter Room Number</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 page-action">
-                        <button>Proceed to Pay</button>
+                    <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 main-action">
+                        <button class="med-button">Proceed to Pay</button>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12 page-action">
-                    <button>Proceed</button>
-                </div>
+                
             </div>
         </section>
         <footer>
