--- a/hospital/cart.html
+++ b/hospital/cart.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../css/getStarted.css" type="text/css" />
         <link rel="stylesheet" href="../css/backgroundImage.css" type="text/css" />
         <link rel="stylesheet" href="../css/hospital.css" type="text/css" />
+        <link rel="stylesheet" href="../css/hospital-menu.css" type="text/css" />
         <link
             rel="icon"
             href="../images/favicon.jpeg"
@@ -36,47 +37,50 @@
                 </div>
             </div>
         </header>
-        <section class="cart">
+        <section class="cart delivery">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 del-to">
                 Delivering to Apollo, Bannerghatta
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 cart-container">
-                <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 cart-wrapper">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 cart-container delivery-container">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 cart-wrapper delivery-wrapper">
                     <div class="head">
-                        <p>YOUR CART</p>
+                        <h3>YOUR CART</h3>
                     </div>
-                    <div class="total-wrap">
-                        Subtotal: Rs. 120
+                    <div class="total-wrap cart">
+                        <h4>Subtotal: Rs. 120</h4>
                     </div>
                     <div class="ordered-item s-i col-sm-12 col-md-12 col-lg-12 col-xs-12">
                         <div class="f-l col-sm-2 col-md-2 col-lg-2 col-xs-4 item-wrapper">
-                            <img src="../images/southindian.png" class="img-responsive" />
+                            <img src="../images/si-meal.png" class=" img img-responsive" />
                         </div>
                         <div class="f-l col-sm-7 col-md-7 col-lg-7 item-detail-wrap">
                             <div class="item-name">
-                                South Indian Lunch Plan
+                                <h3>South Indian Lunch Plan</h3>
                             </div>
                             <div class="item-desc">
-                                1 Rawa Pulao & 1 Kesari Bath
+                                <p>1 Rawa Pulao & 1 Kesari Bath</p>
                             </div>
                             <div class="price">
-                                Rs. 120
+                                <p>Rs. 120</p>
                             </div>
                             <div class="arriving-info">
-                                Arriving  by 1st June 2021,
+                                <p>Arriving  by 1st June 2021,</p>
                             </div>
                             <div class="del-time">
-                                12:00-2:30 pm
+                                <p>12:00-2:30 pm</p>
                             </div>
                         </div>
-                        <div class="f-l col-sm-7 col-md-7 col-lg-7 item-action-wrap">
-                            <span class="del-icon"></span>
-                            <div class="quantity-wr">
-                                <div class="subs f-l">-</div>
-                                <div class="value f-l">10</div>
-                                <div class="add f-l">+</div>
-                                <div class="clr"></div>
+                        <div class="f-l col-sm-3 col-md-3 col-lg-3 item-action-wrap">
+                            <span class="del-icon"><a href="javascript:void(0);" data-name="delete" class="glyphicon glyphicon-trash"></a></span>
+                            <div class="clasfi">
+                                <div class="quantity-wr">
+                                    <div class="subs f-l">-</div>
+                                    <div class="value f-l">10</div>
+                                    <div class="add f-l">+</div>
+                                    <div class="clr"></div>
+                                </div>
                             </div>
+                            <div class="clr"></div>
                         </div>
                         <div class="clr"></div>
                     </div>
