--- a/hospital/payment-success.html
+++ b/hospital/payment-success.html
@@ -4,23 +4,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="./vendor/css/bootstrap.min.css"
+            href="../vendor/css/bootstrap.min.css"
             type="text/css"
         />
-        <link rel="stylesheet" href="./css/index.css" type="text/css" />
-        <link rel="stylesheet" href="./css/common.css" type="text/css" />
-        <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
-        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
+        <link rel="stylesheet" href="../css/index.css" type="text/css" />
+        <link rel="stylesheet" href="../css/common.css" type="text/css" />
+        <link rel="stylesheet" href="../css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="../css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
-            href="./images/favicon.jpeg"
+            href="../images/favicon.jpeg"
             type="image"
             sizes="16x16"
         />
-        <script type="text/javascript" src="./vendor/js/jquery.js"></script>
-        <script type="text/javascript" src="./vendor/js/popper.js"></script>
-        <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
-        <script type="text/javascript" src="./js/homePage.js"></script>
+        <script type="text/javascript" src="../vendor/js/jquery.js"></script>
+        <script type="text/javascript" src="../vendor/js/popper.js"></script>
+        <script type="text/javascript" src="../vendor/js/bootstrap.js"></script>
+        <script type="text/javascript" src="../js/homePage.js"></script>
     </head>
     <body>
         <header>
@@ -29,7 +29,7 @@
                     <div class="logo">
                         <img
                             class="img img-responsive"
-                            src="./images/logo.png"
+                            src="../images/logo.png"
                             alt="logo"
                         />
                     </div>
@@ -42,7 +42,7 @@
                     <div class="payment-in">
                         <div class="payment-success">
                             <div class="payment-success-img">
-                                <img src="./images/payment-success.png" class="img img-responsive" alt="payment success" />
+                                <img src="../images/payment-success.png" class="img img-responsive" alt="payment success" />
                             </div>
                             <div class="payment head">
                                 <h3>Payment Success</h3>
@@ -52,7 +52,6 @@
                                 </div>
                             </div>
                             <div class="back-profile">
-                                <button class="slim-button">Go to your profile</button>
                             </div>
                         </div>
                     </div>
