--- a/auth.html
+++ b/auth.html
@@ -38,7 +38,7 @@
             </div>
         </header>
         <section>
-            <div class="auth-container">
+            <div class="auth-container auth-height">
                 <div class="auth-wrapper">
                     <div class="auth-wrapper-inn">
                         <div class="top-links">
