all pages ready for review

--- a/static/career.html
+++ b/static/career.html
@@ -24,7 +24,7 @@
       <div class="head_img justify-content-md-center row align-items-center "><h4>Careers</h4></div>
     </div>
    
-      <div class="container px-5 mx-5">
+      <div class="container px-md-5 mx-md-5">
          
         <div class=" pt-5 mt-5">
             <h4>Want to work with us?  Fill in the details.</h4>
