--- a/static/faq.html
+++ b/static/faq.html
@@ -747,10 +747,10 @@
   </div></div>
   </div>
   </div>
-  <div class="col-1 pl-4 py-5 my-5 text-right scroll ">
-  <div class="row pl-4 sticky-top py-5 my-5  text-right">
-    <div  class=" py-5 pl-4 my-5 align-items-center  justify-content-center text-right">
-      <div class="py-5 pl-4 my-5 text-right ">
+  <div class="col-1 pl-md-4 py-5 my-5 text-right scroll ">
+  <div class="row pl-md-4 sticky-top py-5 my-5  text-right">
+    <div  class=" py-5 pl-md-4 my-5 align-items-center  justify-content-center text-right">
+      <div class="py-5 pl-md-4 my-5 text-right ">
         <div class="row pl-4"><a data-toggle="collapse" href="#collapseExampl" role="button" aria-expanded="false" aria-controls="collapseExample" class="text-muted"><i onclick="chng(this)" class="fas fa-circle scroll"></i></a></div>
         <div class="row pl-4"><a data-toggle="collapse" href="#collapseExampl1" role="button" aria-expanded="false" aria-controls="collapseExample" class="text-muted"><i onclick="chng(this)" class="fas fa-circle "></i></a></div>
         <div class="row pl-4"><a data-toggle="collapse" href="#collapseExampl2" role="button" aria-expanded="false" aria-controls="collapseExample" class="text-muted"><i onclick="chng(this)" class="fas fa-circle "></i></a></div>
