--- a/static/testimonials.html
+++ b/static/testimonials.html
@@ -28,8 +28,8 @@
         <div class=" pt-5">
           <div class="mt-5 pt-4 px-5 bw border" id="collapseExample13">
             <div class="pl-4"> <h6>Customer Stories</h6>Posted on 2nd June</div>
-               <div class="card box card-body border-0 pr-5 mr-5">
-                <span class="pr-5 mr-5">   Surabhi shares her story about on and off relationship with diets until she found an easy solution with 
+               <div class="card box card-body border-0 pr-md-5 mr-md-5">
+                <span class="pr-md-5 mr-md-5">   Surabhi shares her story about on and off relationship with diets until she found an easy solution with 
                   Keto meal subscription with Sprink. No Repeat Menus, Calorie Precise- Macronutrient Lorem, ipsum dolor sit amet consectetur adipisicing elit. A aspernatur dolorem distinctio unde, laudantium nam animi quos neque accusantium blanditiis! Impedit magni vel facilis asperiores tempora corrupti unde quas placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quaerat! Corrupti nam odit, laboriosam totam natus consectetur cupiditate eum. Distinctio rerum consectetur mollitia ratione sunt assumenda ad, temporibus repellendus officiis? <a href="">Hygiene checks here.</a></span>
                  <a href="javascript:void(0);" class="read">...Read More</a>
        
@@ -44,8 +44,8 @@
          <div class=" pt-5">
           <div class="mt-5 pt-4 px-5 bw border" id="collapseExample13">
             <div class="pl-4"> <h6>Customer Stories</h6>Posted on 2nd June</div>
-               <div class="card box card-body border-0 pr-5 mr-5">
-                <span class="pr-5 mr-5">   Surabhi shares her story about on and off relationship with diets until she found an easy solution with 
+               <div class="card box card-body border-0 pr-md-5 mr-md-5">
+                <span class="pr-md-5 mr-md-5">   Surabhi shares her story about on and off relationship with diets until she found an easy solution with 
                   Keto meal subscription with Sprink. No Repeat Menus, Calorie Precise- Macronutrient Lorem, ipsum dolor sit amet consectetur adipisicing elit. A aspernatur dolorem distinctio unde, laudantium nam animi quos neque accusantium blanditiis! Impedit magni vel facilis asperiores tempora corrupti unde quas placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quaerat! Corrupti nam odit, laboriosam totam natus consectetur cupiditate eum. Distinctio rerum consectetur mollitia ratione sunt assumenda ad, temporibus repellendus officiis? </span>
                  <a href="javascript:void(0);" class="read">...Read More</a>
        
